Updated to Steam Version 1.2

--- a/liquids/vnliquidpluranium.liquid
+++ b/liquids/vnliquidpluranium.liquid
@@ -1,7 +1,7 @@
 {
   "name" : "vnliquidpluranium",
   "liquidId" : 137,
-  "description" : "A measure of liquid pluranium. How is this possible!?",
+  "description" : "^#ffbf80;A measure of liquid pluranium. How is this possible!?^white;",
 	"tickDelta" : 3,
 	"color" : [255, 155, 0, 220],
 	"radiantLight" : [90, 90, 130],
